--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas>
+		<script src="modules/utils.js"></script>
 		<script src="modules/road.js"></script>
 		<script src="modules/controls.js"></script>
 		<script src="modules/car.js"></script>
