--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<canvas id="myCanvas"></canvas>
 		<script src="modules/utils.js"></script>
+		<script src="modules/sensor.js"></script>
 		<script src="modules/road.js"></script>
 		<script src="modules/controls.js"></script>
 		<script src="modules/car.js"></script>
