--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Self Driving Car</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-	<body>
-		<canvas id="myCanvas"></canvas>
-		<script src="modules/utils.js"></script>
-		<script src="modules/sensor.js"></script>
-		<script src="modules/road.js"></script>
-		<script src="modules/controls.js"></script>
-		<script src="modules/car.js"></script>
-		<script src="main.js"></script>
-	</body>
+<head>
+    <title>Self-driving car - No libraries</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+        <button onclick="save()">💾</button>
+        <button onclick="discard()">🗑️</button>
+    </div>
+    <canvas id="networkCanvas"></canvas>
+    <script src="visualizer.js"></script>
+    <script src="network.js"></script>
+    <script src="sensor.js"></script>
+    <script src="utils.js"></script>
+    <script src="road.js"></script>
+    <script src="controls.js"></script>
+    <script src="car.js"></script>
+    <script src="main.js"></script>
+</body>
 </html>
